fix(helm): update PostgreSQL resource requests and limits in values.yaml
- Increase CPU request from 10m to 500m
- Increase memory limit from 256Mi to 2Gi
- Update CPU limit from 50m to 1

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -79,10 +79,10 @@ postgres:
   resources:
     requests:
       memory: 128Mi
-      cpu: 10m
+      cpu: 500m
     limits:
-      memory: 256Mi
-      cpu: 50m
+      memory: 2Gi
+      cpu: 1
 
 # -- Store app resource limits
 resources:
