--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -45,21 +45,15 @@ spec:
             - name: DATABASE_URL
               value: "postgresql://postgres:{{ .Values.postgres.auth.password }}@{{ .Release.Name }}-postgres-svc:5432/postgres"
           livenessProbe:
+            {{- toYaml .Values.livenessProbe | nindent 12 }}
             httpGet:
               path: /health
               port: store
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
           readinessProbe:
+            {{- toYaml .Values.readinessProbe | nindent 12 }}
             httpGet:
               path: /health
               port: store
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 3
-            failureThreshold: 3
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
