reconfig(darwin-store): Update configuration

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -110,3 +110,6 @@ readinessProbe:
   periodSeconds: 30
   timeoutSeconds: 3
   failureThreshold: 3
+config:
+  reset_chaos_state: true
+  chaos_mode: "disabled"
