--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -42,7 +42,7 @@ darwin:
 # -- Application metadata (sent in telemetry)
 app:
   name: "darwin-store"
-  version: "1.2.0"
+  version: "previous"
 # -- Postgres configuration
 postgres:
   # Image settings
