fix(darwin-store): Set app.version to previous-stable to fix ImagePullBackOff

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -42,7 +42,7 @@ darwin:
 # -- Application metadata (sent in telemetry)
 app:
   name: "darwin-store"
-  version: "last-known-good"
+  version: "previous-stable"
 # -- Postgres configuration
 postgres:
   # Image settings
