--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,7 +5,7 @@
 # -- Image configuration
 image:
   repository: ghcr.io/the-darwin-project/store
-  tag: "6da2588"
+  tag: "latest"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
 imagePullSecrets: []
