--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   tag: "previous"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
-imagePullSecrets: []
+imagePullSecrets: [name: ghcr-secret]
 # -- Replica count (scaled to 2)
 replicaCount: 1
 # -- Service configuration
