fix(darwin-store): Update image tag to valid commit SHA 6da2588

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -42,7 +42,7 @@ darwin:
 # -- Application metadata (sent in telemetry)
 app:
   name: "darwin-store"
-  version: "previous-stable"
+  version: "6da2588"
 # -- Postgres configuration
 postgres:
   # Image settings
