--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,6 +3,7 @@
 # Target Platform: OpenShift 4.x / Red Hat UBI 9
 
 # -- Image configuration
+# Forcing GitOps sync
 image:
   repository: ghcr.io/the-darwin-project/store
   tag: "352bcc2"
