fix(darwin-store): Force GitOps sync to correct image tag

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -25,7 +25,8 @@ route:
   store:
     enabled: true
     # host: darwin-store.apps.example.com  # Leave empty for auto-generated
-    annotations: {}
+    annotations:
+      gemini-cli/force-sync: "2026-02-06T01:49:00Z"
   chaos:
     enabled: true
     # host: darwin-chaos.apps.example.com  # Leave empty for auto-generated
