--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@
 # Forcing GitOps sync
 image:
   repository: ghcr.io/the-darwin-project/store
-  tag: "previous_stable" # Rollback to previous version
+  tag: "previous" # Rollback to previous version
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
 imagePullSecrets: [{name: ghcr-secret}]
