--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@
 # Forcing GitOps sync
 image:
   repository: ghcr.io/the-darwin-project/store
-  tag: "6da2588"
+  tag: "previous"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
 imagePullSecrets: [{name: ghcr-secret}]
@@ -44,7 +44,7 @@ darwin:
 # -- Application metadata (sent in telemetry)
 app:
   name: "darwin-store"
-  version: "v6da2588" # -- Postgres configuration
+  version: "previous" # -- Postgres configuration
 postgres:
   # Image settings
   image:
