--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@
 # Forcing GitOps sync
 image:
   repository: ghcr.io/the-darwin-project/store
-  tag: "6da2588"
+  tag: "previous-stable"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
 imagePullSecrets: [{name: ghcr-secret}]
@@ -25,8 +25,7 @@ route:
   store:
     enabled: true
     # host: darwin-store.apps.example.com  # Leave empty for auto-generated
-    annotations:
-      gemini-cli/force-sync: "2026-02-06T03:40:00Z"
+    annotations: {}
   chaos:
     enabled: true
     # host: darwin-chaos.apps.example.com  # Leave empty for auto-generated
