chore(darwin-store): force argocd sync by adding a label

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: darwin-store
         app.kubernetes.io/instance: {{ .Release.Name }}
+        gemini-cli-force-sync: "true"
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
