--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,12 +6,12 @@
 # Forcing GitOps sync
 image:
   repository: ghcr.io/the-darwin-project/store
-  tag: "previous-stable"
+  tag: "6da2588"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
 imagePullSecrets: [{name: ghcr-secret}]
 # -- Replica count (scaled to 2)
-replicaCount: 2
+replicaCount: 1
 # -- Service configuration
 service:
   store:
