--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -12,6 +12,12 @@ image:
 imagePullSecrets: [{name: ghcr-secret}]
 # -- Replica count (scaled to 2)
 replicaCount: 2
+# -- Horizontal Pod Autoscaler configuration
+hpa:
+  enabled: true
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
 # -- Service configuration
 service:
   store:
