--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,15 +9,9 @@ image:
   tag: "3363aa7"
   pullPolicy: IfNotPresent
 # -- Image pull secrets (if using private registry)
-imagePullSecrets: [{name: ghcr-secret}]
-# -- Replica count (scaled to 2)
-replicaCount: 2
-# -- Horizontal Pod Autoscaler configuration
-hpa:
-  enabled: true
-  minReplicas: 1
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 80
+imagePullSecrets: [{ name: ghcr-secret }]
+# -- Replica count
+replicaCount: 1
 # -- Service configuration
 service:
   store:
