ops(darwin-store): update app.version to 50

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -43,7 +43,8 @@ darwin:
 # -- Application metadata (sent in telemetry)
 app:
   name: "darwin-store"
-  version: "45" # -- Postgres configuration
+  version: "50" 
+# -- Postgres configuration
 postgres:
   # Image settings
   image:
