ops(darwin-store): update app.version to 52

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -19,6 +19,8 @@ spec:
         app: darwin-store
         app.kubernetes.io/instance: {{ .Release.Name }}
         gemini-cli-force-sync: "true"
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
