--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -19,5 +19,10 @@ data:
   SERVICE_NAME: {{ .Values.app.name | quote }}
   SERVICE_VERSION: {{ .Values.app.version | quote }}
 
+  # GitOps coordinates (self-describing service -- sent in telemetry to Brain)
+  GITOPS_REPO: "The-Darwin-Project/Store"
+  GITOPS_REPO_URL: "https://github.com/The-Darwin-Project/Store.git"
+  HELM_PATH: "helm/values.yaml"
+
   # Chaos mode
   CHAOS_MODE: {{ .Values.chaos_mode | quote }}
