fix(helm): update CHAOS_MODE reference to use config path

--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -25,4 +25,4 @@ data:
   HELM_PATH: "helm/values.yaml"
 
   # Chaos mode
-  CHAOS_MODE: {{ .Values.chaos_mode | quote }}
+  CHAOS_MODE: {{ .Values.config.chaos_mode | quote }}
