--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -112,7 +112,7 @@ readinessProbe:
   timeoutSeconds: 3
   failureThreshold: 3
 config:
-  reset_chaos_state: false
-  chaos_mode: "enabled"
+  reset_chaos_state: true
+  chaos_mode: "disabled"
   archAware:
     enabled: false
