feat(deployment): add Kubernetes annotations for service monitoring and GitOps integration; deprecate darwin_client module in favor of annotations

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -20,6 +20,10 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
         gemini-cli-force-sync: "true"
       annotations:
+        darwin.io/monitored: "true"
+        darwin.io/gitops-repo: "https://github.com/The-Darwin-Project/Store.git"
+        darwin.io/helm-path: "helm/values.yaml"
+        darwin.io/service-name: "darwin-store"
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         {{- if .Values.restartedAt }}
         kubectl.kubernetes.io/restartedAt: {{ .Values.restartedAt | quote }}
