--- a/helm/templates/postgres.yaml
+++ b/helm/templates/postgres.yaml
@@ -44,37 +44,40 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       securityContext:
-        fsGroup: 1001
+        fsGroup: 26  # RHEL postgresql-15 runs as UID 26
       containers:
         - name: postgres
-          image: "{{ .Values.postgres.image.repository }}:{{ .Values.postgres.image.tag }}"
+          image: "{{ .Values.postgres.image.repository }}@{{ .Values.postgres.image.digest }}"
           ports:
             - containerPort: 5432
               name: postgres
           env:
+            # RHEL9 postgresql-15: use POSTGRESQL_ADMIN_PASSWORD for the postgres superuser.
+            # POSTGRESQL_USER=postgres is NOT allowed (reserved superuser name).
+            # The app connects as 'postgres' so we use admin mode + create the DB ourselves.
             {{- if .Values.postgres.auth.existingSecret }}
-            - name: POSTGRES_PASSWORD
+            - name: POSTGRESQL_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.postgres.auth.existingSecret }}
                   key: postgres-password
             {{- else }}
-            - name: POSTGRES_PASSWORD
+            - name: POSTGRESQL_ADMIN_PASSWORD
               value: {{ .Values.postgres.auth.password | quote }}
             {{- end }}
-            - name: PGDATA
-              value: /var/lib/postgresql/data/pgdata
+            # Optional: create a named database (admin mode creates 'postgres' DB by default)
+            - name: POSTGRESQL_DATABASE
+              value: "postgres"
           volumeMounts:
             - name: postgres-data
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/pgsql/data
           resources:
             {{- toYaml .Values.postgres.resources | nindent 12 }}
           livenessProbe:
             exec:
               command:
-                - pg_isready
-                - -U
-                - postgres
+                - /usr/libexec/check-container
+                - --live
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -82,9 +85,7 @@ spec:
           readinessProbe:
             exec:
               command:
-                - pg_isready
-                - -U
-                - postgres
+                - /usr/libexec/check-container
             initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 3
